# cs330-zero-trust

./: .gitignore  .gitmodules  README.md
client/: CMakeLists.txt  Dockerfile  Makefile  README.md  listen.cpp  listen.h  main.cpp  main.py  msg.h  requirements.txt  wg_types.h  zt-client.service
client/scripts/: setup_host1.sh  setup_host2.sh
client/zt_host/: auth.py  local_pipe.py  session.py  wireguard.py
keycloak/: Dockerfile  compose-cache.yml  compose-root.yml  init_db.sh  start_keycloak.sh  supervisord.conf
keycloak/pgadmin-config/: servers.json
